# n2k_router_arduino

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  README.adoc  REVIEW_SUMMARY.md  decodestacktrace.sh  platformio.ini  startvcan.sh  template.html
lib/myble/: BTInterface.cpp  BTInterface.h
lib/n2k_utils/: ArduinoPort.cpp  ArduinoPort.h  LinuxPort.h  Log.cpp  Log.h  MockEEPROM.h  N2K.cpp  Ports.cpp  Ports.h  TwoWireProvider.cpp  Utils.cpp  Utils.h
lib/ve_direct/: VeDirect.cpp  VeDirect.h
pcb/n2k_meteo_gps/: fp-info-cache  n2k_meteo_gps-B_Mask.gbr  n2k_meteo_gps-Edge_Cuts.gbr  n2k_meteo_gps-F_Cu.gbr  n2k_meteo_gps-F_Mask.gbr  n2k_meteo_gps-F_Paste.gbr  n2k_meteo_gps-F_SilkS.gbr  n2k_meteo_gps-NPTH-drl_map.ps  n2k_meteo_gps-NPTH.drl  n2k_meteo_gps-PTH-drl_map.ps  n2k_meteo_gps-PTH.drl  n2k_meteo_gps-cache.lib  n2k_meteo_gps-job.gbrjob  n2k_meteo_gps-rescue.lib  n2k_meteo_gps.kicad_pcb  n2k_meteo_gps.kicad_prl  n2k_meteo_gps.kicad_pro  n2k_meteo_gps.kicad_sch  n2k_meteo_gps_gps-B_Cu.gbr  ~_autosave-n2k_meteo_gps.kicad_pcb.lck
pcb/n2k_meteo_gps_1.0/: n2k_meteo_gps.kicad_sch
src/: Agents.hpp  BLEConf.cpp  BLEConf.h  BMV712.cpp  BMV712.h  CMakeLists.txt  CommandHandler.hpp  Conf.cpp  Conf.h  Constants.h  Context.h  Data.cpp  Data.h  Display.cpp  Display.h  Dummy.cpp  Dummy.h  EVO.cpp  EVO.h  EnvMessanger.cpp  EnvMessanger.h  EnvMessenger.cpp  EnvMessenger.h  GPS.cpp  GPS.h  GPSX.cpp  GPSX.h  GPS_I2C.cpp  GPS_I2C.h  HumTemp.cpp  HumTemp.h  Leds.cpp  Leds.h  Log.cpp  Makefile  MeteoBME.cpp  MeteoBME.h  MeteoDHT.cpp  MeteoDHT.h  N2K.cpp  (+37 more)
(+48 files in other folders)
